<resources>
    <string name="app_name">Gia Viet Center</string>

    <string name="timesheet">Thời khoá biểu</string>
    <!--Common string-->
    <string name="student">student</string>
    <string name="ctu_url">https://www.ctu.edu.vn</string>
    <string name="select_subject">Chọn môn học</string>
    <string name="html_notify">/thong-bao/</string>
    <string name="sebject_doc_url">https://drive.google.com/viewer?url=http://www.cit.ctu.edu.vn/decuong/</string>
    <string name="news_url">https://www.ctu.edu.vn/thong-bao.html?start=</string>

    <!--Error message-->
    <string name="request_failed">Request Failed</string>

    <!--Info message-->
    <string name="LOGIN_FAILED">Mã số đăng nhập hoặc mật khẩu không chính xác</string>
    <string name="CONNECT_FAILED">Không có internet, hãy thử lại.</string>
    <string name="QUICK_CONFIRM">Bạn có muốn thoát ứng dụng không?</string>
    <string name="LOGOUT_CONFIRM">Bạn có muốn đăng xuất không?</string>
    <string name="DOUBLE_BACK">Nhấn lần nữa để thoát ứng dụng.</string>

    <!--Preferences Key-->
    <string name="MY_TIMESHEET">MY_TIMESHEET</string>
    <string name="EXIST_TIMESHEET">EXIST_TIMESHEET</string>
    <string name="USER">USER</string>
    <string name="SAVE_PASSWORD">SAVE_PASSWORD</string>
    <string name="FIRST_LOGIN">FIRST_LOGIN</string>
    <string name="TIMESHEET_PREFS">TIMESHEET_PREFS</string>
    <string name="NOTIFICATION_STUDENT">NOTIFICATION_STUDENT</string>
    <string name="NOTIFICATION_TEACHER">NOTIFICATION_TEACHER</string>
    <string name="NOTIFICATION_TOTAL">NOTIFICATION_TOTAL</string>
    <string name="TEACHER_INFO">TEACHER_INFO</string>
    <string name="STUDENT_INFO">STUDENT_INFO</string>

    <!--Intent Key-->
    <string name="NOTICATION_TITLE">NOTICATION_TITLE</string>
    <string name="NOTICATION_BODY">NOTICATION_BODY</string>
    <string name="NOTICATION_ID">NOTICATION_ID</string>
    <string name="TS_DETAILS">TS_DETAILS</string>
    <string name="TS_DETAILS_FROM_NEWS">TS_DETAILS_FROM_NEWS</string>
    <string name="LIST_STUDENT">LIST_STUDENT</string>
    <string name="SUBJECT_CODE">SUBJECT_CODE</string>
    <string name="MESSAGE">MESSAGE</string>
    <string name="SUBJECT_NAME">SUBJECT_NAME</string>
    <string name="FROM_ADD_NOTIFICATION">FROM_ADD_NOTIFICATION</string>
    <string name="FROM_NOTIFICATION">FROM_NOTIFICATION</string>
    <string name="FROM_SHORTCUT_NEWS">FROM_SHORTCUT_NEWS</string>
    <string name="FROM_SHORTCUT_ADD_NOTIFY">FROM_SHORTCUT_ADD_NOTIFY</string>

    <!--Child database value-->
    <string name="CHILD_SUBJECTS">Subjects</string>
    <string name="CHILD_CLASS">Class</string>
    <string name="CHILD_TIMESHEET">Timesheet</string>
    <string name="CHILD_ACCOUNTS">Accounts</string>
    <string name="CHILD_STUDENTINFO">StudentInfomation</string>
    <string name="CHILD_TEACHER">TeacherInfo</string>
    <string name="CHILD_ALLCLASS">AllClass</string>
    <string name="CHILD_LEAVESTUDENT">LeaveStudent</string>
    <string name="CHILD_LEARNING_RESULT">LearningResult</string>
    <string name="CHILD_TEACHER_COMMENT">TeacherComment</string>

    <!--Navigation title-->
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="teacher_home">Home</string>
    <string name="teacher_class">Học phần</string>
    <string name="teacher_notify">Thông báo</string>
    <string name="teacher_custom">Tuỳ chọn</string>
    <string name="action_settings">Settings</string>
    <string name="report_sheet">Thống kê</string>
    <string name="send_notification">Gửi thông báo</string>
    <string name="title_activity_parent">ParentActivity</string>

    <!--Navigation title for parents-->
    <string name="hischool_results">Kết quả học tập</string>
    <string name="hischool_info">Thông tin học viên</string>
    <string name="title_news">Tin tức</string>
    <string name="title_sign_out">Đăng xuất</string>
    <string name="title_private">Cá nhân</string>
    <string name="title_links">Liên kết</string>
    <string name="title_customer">Tuỳ chọn</string>
    <string name="title_out">Thoát</string>
</resources>
